--- a/index.html
+++ b/index.html
@@ -1,8 +1,51 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>Jake Willman - Destinations Bucketlist</title>
+      <meta charset="UTF-8">
    </head>
    <body>
       <!-- Write your HTML in this file! -->
+      <header>
+         <h1>My bucket list travel destinations</h1>
+      </header>
+      <main>
+         <article>
+            <section class="Grand-Canyon">
+               <h2>The Grand Canyon</h2>
+               <p>
+               Although I have an intense fear of heights.. one day I would love to visit the Grand Canyon. Just don't look down!&#128549;
+               </p>
+               <figure>
+                  <img src="images/grandcanyon.jpg" alt="A photo of the massive beautiful natural landscape of The Grand Canyon">
+                  <figcaption>The Grand Canyon. Arizona, USA</figcaption>
+               </figure>
+            </section>
+            
+            <section class="New-York">
+               <h2>New York City</h2>
+               <p>
+               You wouldn't expect an introvert like myself to be interested in visting such a densely populated city..<br>
+               However, I'm intrigued by all of the architecture and I've heard the food is amazing! You'd never catch me living there though.&#128517;
+               </p>
+               <figure>
+                  <img src="images/newyork.jpg" alt="A photo of Times Square, New York at night.">
+                  <figcaption>Times Square. New York City, USA </figcaption>
+               </figure>
+               <section class="Paris">
+                  <h2>Paris, France</h2>
+                  <p>
+                  I have yet to travel outside the country, but I think this would be the first place I'd like to visit, if ever given the opportunity.<br> 
+                  From the unique culture, amazing landscapes, scenery, art, history, food and archtitecture.. It seems like there's endless things to do and enjoy there!<br>
+                  I believe that's why it remains one of the most visited cities in the entire world!
+                  </p>
+               <figure>
+                     <img src="images/Paris.jpeg" alt="A distant photo of the Eifel Tower taken from across the nearby Seine River in Paris, France including some vibrant flowers">
+                     <figcaption>The Eifel Tower. Paris, France</figcaption>
+               </figure>
+
+         </article>
+      </main>
+      <footer>© 2023 - Jake Willman</footer>
    </body>
 </html>
