finised all requirements for Graded Assignment 4

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
    <head>
       <title>Jake Willman - Destinations Bucketlist</title>
       <meta charset="UTF-8">
+      <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
    <body>
-      <!-- Write your HTML in this file! -->
-      <header>
-         <h1>My bucket list travel destinations</h1>
+      <header id="mainHeading">
+         <h1>My bucket list travel destinations!</h1>
       </header>
       <main>
          <article>
             <section class="Grand-Canyon">
                <h2>The Grand Canyon</h2>
-               <p>
+               <p id="testP" class="funParagraph">
                Although I have an intense fear of heights.. one day I would love to visit the Grand Canyon. Just don't look down!&#128549;
                </p>
                <figure>
@@ -32,6 +32,7 @@
                   <img src="images/newyork.jpg" alt="A photo of Times Square, New York at night.">
                   <figcaption>Times Square. New York City, USA </figcaption>
                </figure>
+               
                <section class="Paris">
                   <h2>Paris, France</h2>
                   <p>
@@ -39,7 +40,7 @@
                   From the unique culture, amazing landscapes, scenery, art, history, food and archtitecture.. It seems like there's endless things to do and enjoy there!<br>
                   I believe that's why it remains one of the most visited cities in the entire world!
                   </p>
-               <figure>
+               <figure class="eifelTower">
                      <img src="images/Paris.jpeg" alt="A distant photo of the Eifel Tower taken from across the nearby Seine River in Paris, France including some vibrant flowers">
                      <figcaption>The Eifel Tower. Paris, France</figcaption>
                </figure>
