removed unnecessary class selector that wasn't being used

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       </header>
       <main>
          <article>
-            <section class="Grand-Canyon">
+            <section>
                <h2>The Grand Canyon</h2>
                <p id="testP" class="funParagraph">
-               Although I have an intense fear of heights.. one day I would love to visit the Grand Canyon. Just don't look down!&#128549;
+               Although I have an intense fear of heights.. one day I would love to visit the Grand Canyon. Just don't look down! &#128549;
                </p>
                <figure>
                   <img src="images/grandcanyon.jpg" alt="A photo of the massive beautiful natural landscape of The Grand Canyon">
@@ -26,7 +26,7 @@
                <h2>New York City</h2>
                <p>
                You wouldn't expect an introvert like myself to be interested in visting such a densely populated city..<br>
-               However, I'm intrigued by all of the architecture and I've heard the food is amazing! You'd never catch me living there though.&#128517;
+               However, I'm intrigued by all of the architecture and I've heard the food is amazing! You'd never catch me living there though. &#128517;
                </p>
                <figure>
                   <img src="images/newyork.jpg" alt="A photo of Times Square, New York at night.">
