corrected style on images to allow for automatic  resizing on different viewports

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
       <header id="mainHeading">
-         <h1>My bucket list travel destinations!</h1>
+         <h1>My bucket list <br>travel destinations</h1>
       </header>
       <main>
          <article>
