made a few minor changes to styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section class="New-York">
                <h2>New York City</h2>
                <p>
-               You wouldn't expect an introvert like myself to be interested in visting such a densely populated city..<br>
+               You wouldn't expect an introvert like myself to be interested in visting such a densely populated city..
                However, I'm intrigued by all of the architecture and I've heard the food is amazing! You'd never catch me living there though. &#128517;
                </p>
                <figure>
@@ -36,8 +36,8 @@
                <section class="Paris">
                   <h2>Paris, France</h2>
                   <p>
-                  I have yet to travel outside the country, but I think this would be the first place I'd like to visit, if ever given the opportunity.<br> 
-                  From the unique culture, amazing landscapes, scenery, art, history, food and archtitecture.. It seems like there's endless things to do and enjoy there!<br>
+                  I have yet to travel outside the country, but I think this would be the first place I'd like to visit, if ever given the opportunity. 
+                  From the unique culture, amazing landscapes, scenery, art, history, food and archtitecture.. It seems like there's endless things to do and enjoy there!
                   I believe that's why it remains one of the most visited cities in the entire world!
                   </p>
                <figure class="eifelTower">
