testing to see if changes made will  make all specs pass with no failures

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <section>
                <h2>The Grand Canyon</h2>
                <p id="testP" class="funParagraph">
-               Although I have an intense fear of heights.. one day I would love to visit the Grand Canyon. Just don't look down! &#128549;
+               Although I have an intense fear of heights.. one day I would love to visit the Grand Canyon. 
+               Just don't look down! &#128549;
                </p>
                <figure>
                   <img src="images/grandcanyon.jpg" alt="A photo of the massive beautiful natural landscape of The Grand Canyon">
@@ -26,7 +27,8 @@
                <h2>New York City</h2>
                <p>
                You wouldn't expect an introvert like myself to be interested in visting such a densely populated city..
-               However, I'm intrigued by all of the architecture and I've heard the food is amazing! You'd never catch me living there though. &#128517;
+               However, I'm intrigued by all of the architecture and I've heard the food is amazing! 
+               You'd never catch me living there though. &#128517;
                </p>
                <figure>
                   <img src="images/newyork.jpg" alt="A photo of Times Square, New York at night.">
@@ -36,12 +38,16 @@
                <section class="Paris">
                   <h2>Paris, France</h2>
                   <p>
-                  I have yet to travel outside the country, but I think this would be the first place I'd like to visit, if ever given the opportunity. 
-                  From the unique culture, amazing landscapes, scenery, art, history, food and archtitecture.. It seems like there's endless things to do and enjoy there!
+                  I have yet to travel outside the country, but I think this would be the first place I'd like to visit, 
+                  if ever given the opportunity. 
+                  From the unique culture, amazing landscapes, scenery, art, history, food and archtitecture.. 
+                  It seems like there's endless things to do and enjoy there!
                   I believe that's why it remains one of the most visited cities in the entire world!
                   </p>
                <figure class="eifelTower">
-                     <img src="images/Paris.jpeg" alt="A distant photo of the Eifel Tower taken from across the nearby Seine River in Paris, France including some vibrant flowers">
+                     <img src="images/Paris.jpeg" 
+                      alt="A distant photo of the Eifel Tower taken from across the nearby Seine River in Paris, 
+                      France including some vibrant flowers">
                      <figcaption>The Eifel Tower. Paris, France</figcaption>
                </figure>
 
